--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-[{"ordem":1,"propriedade":"autor"},{"ordem":1,"propriedade":"titulo"},{"ordem":1,"propriedade":"edicao"},{"lock":"false"}]
+[{"ordem":1,"propriedade":"titulo"},{"ordem":1,"propriedade":"autor"},{"ordem":1,"propriedade":"edicao"},{"lock":"false"}]
